[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/gui/default.theme" type="Theme" id=1]
[ext_resource path="res://src/gui/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://src/gui/settings_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gui/controls_popup_v2.png" type="Texture" id=4]
[ext_resource path="res://src/gui/how_to_play.png" type="Texture" id=5]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.227451 )

[node name="HowToPlay" type="Sprite" parent="."]
position = Vector2( 344, 136 )
texture = ExtResource( 5 )

[node name="Controls" type="Sprite" parent="."]
position = Vector2( 344, 416 )
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.55
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 131.0
margin_top = 210.0
margin_right = 329.0
margin_bottom = 390.0
custom_constants/separation = 7

[node name="Paused" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 198.0
margin_bottom = 48.0
text = "PAUSED"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 198.0
margin_bottom = 55.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 198.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 40 )
text = "Resume Game"

[node name="SettingsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 198.0
margin_bottom = 133.0
text = "Settings"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 198.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 40 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
